feat: Add JWT authentication and authorization to Order Service API

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -23,5 +23,10 @@
     "Title": "Order Service API (Development)",
     "Version": "v1-dev",
     "Description": "Development environment for Order Service API with enhanced logging and debugging features"
+  },
+  "Jwt": {
+    "Issuer": "aioutlet-auth-service",
+    "Audience": "aioutlet-order-service",
+    "Key": "development-jwt-signing-key-for-testing-purposes-minimum-32-chars"
   }
 }
