--- a/appsettings.json
+++ b/appsettings.json
@@ -22,5 +22,10 @@
     "Title": "Order Service API",
     "Version": "v1",
     "Description": "RESTful API for managing orders in the e-commerce platform"
+  },
+  "Jwt": {
+    "Issuer": "aioutlet-auth-service",
+    "Audience": "aioutlet-order-service",
+    "Key": "your-super-secret-jwt-signing-key-that-is-at-least-32-characters-long"
   }
 }
