feat: Implement message broker configuration with RabbitMQ and Azure Service Bus support

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -28,5 +28,27 @@
     "Issuer": "aioutlet-auth-service",
     "Audience": "aioutlet-order-service",
     "Key": "development-jwt-signing-key-for-testing-purposes-minimum-32-chars"
+  },
+  "MessageBroker": {
+    "Provider": "RabbitMQ",
+    "RabbitMQ": {
+      "ConnectionString": "amqp://guest:guest@localhost:5672/",
+      "Exchange": "orders.dev.exchange",
+      "ExchangeType": "topic",
+      "PublisherConfirms": true,
+      "RetryAttempts": 2
+    },
+    "AzureServiceBus": {
+      "Namespace": "your-dev-servicebus-namespace",
+      "UseManagedIdentity": false,
+      "ConnectionString": "",
+      "RetryAttempts": 2,
+      "RetryDelayMs": 500
+    },
+    "Topics": {
+      "OrderCreated": "order.created.dev",
+      "OrderUpdated": "order.updated.dev",
+      "OrderCancelled": "order.cancelled.dev"
+    }
   }
 }
