--- a/appsettings.json
+++ b/appsettings.json
@@ -27,5 +27,26 @@
     "Issuer": "aioutlet-auth-service",
     "Audience": "aioutlet-order-service",
     "Key": "your-super-secret-jwt-signing-key-that-is-at-least-32-characters-long"
+  },
+  "MessageBroker": {
+    "Provider": "RabbitMQ",
+    "RabbitMQ": {
+      "ConnectionString": "amqp://guest:guest@localhost:5672/",
+      "Exchange": "orders.exchange",
+      "ExchangeType": "topic",
+      "PublisherConfirms": true,
+      "RetryAttempts": 3
+    },
+    "AzureServiceBus": {
+      "Namespace": "",
+      "UseManagedIdentity": true,
+      "RetryAttempts": 3,
+      "RetryDelayMs": 1000
+    },
+    "Topics": {
+      "OrderCreated": "order.created",
+      "OrderUpdated": "order.updated",
+      "OrderCancelled": "order.cancelled"
+    }
   }
 }
