--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   postgres:
-    image: postgres:15-alpine
+    image: postgres:latest
     container_name: ${SERVICE_NAME:-order-service}-postgres-${ASPNETCORE_ENVIRONMENT:-Development}
     restart: unless-stopped
     environment:
