feat: Refactor setup and teardown scripts for order service; update docker-compose and appsettings for improved configuration

--- a/appsettings.json
+++ b/appsettings.json
@@ -31,7 +31,7 @@
   "MessageBroker": {
     "Provider": "RabbitMQ",
     "RabbitMQ": {
-      "ConnectionString": "amqp://guest:guest@localhost:5672/",
+      "ConnectionString": "amqp://admin:admin123@aioutlet-rabbitmq:5672/",
       "Exchange": "orders.exchange",
       "ExchangeType": "topic",
       "PublisherConfirms": true,
