feat: Add environment-specific configuration files for development, local, and production settings

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,37 +1,37 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "Microsoft.AspNetCore": "Information",
-      "Microsoft.EntityFrameworkCore.Database.Command": "Information",
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
       "Microsoft.EntityFrameworkCore": "Information",
-      "OrderService": "Debug"
+      "OrderService": "Information"
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=order_service_local_db;Username=orderuser;Password=order_dev_pass_123;Port=5433"
+    "DefaultConnection": "Host=localhost;Database=order_service_dev_db;Username=orderuser;Password=order_dev_secure_pass_456;Port=5435"
   },
   "OrderService": {
-    "Environment": "Local",
+    "Environment": "Development",
     "DefaultCurrency": "USD",
     "TaxRate": 0.08,
     "FreeShippingThreshold": 100.0,
     "DefaultShippingCost": 10.0,
-    "OrderNumberPrefix": "ORD",
+    "OrderNumberPrefix": "DEV",
     "EnableDetailedLogging": true,
     "AllowTestOrders": true
   },
   "Api": {
-    "Title": "Order Service API (Local)",
+    "Title": "Order Service API (Development)",
     "Version": "v1",
-    "Description": "RESTful API for managing orders in the e-commerce platform - Local Development",
+    "Description": "RESTful API for managing orders in the e-commerce platform - Development Environment",
     "SwaggerEnabled": true,
     "DetailedErrors": true
   },
   "Jwt": {
     "Issuer": "aioutlet-auth-service",
     "Audience": "aioutlet-order-service",
-    "Key": "your-super-secret-jwt-key-for-development-only-local-environment-testing",
+    "Key": "development-jwt-secret-key-for-order-service-very-secure-and-long-enough",
     "ValidateIssuerSigningKey": true,
     "ValidateIssuer": true,
     "ValidateAudience": true,
@@ -41,13 +41,13 @@
   "MessageBroker": {
     "Provider": "RabbitMQ",
     "RabbitMQ": {
-      "ConnectionString": "amqp://admin:admin123@localhost:5672/",
-      "Exchange": "orders.exchange.local",
+      "ConnectionString": "amqp://admin:rabbitmq_dev_secure_654@localhost:5673/",
+      "Exchange": "orders.exchange.dev",
       "ExchangeType": "topic",
       "PublisherConfirms": true,
       "RetryAttempts": 3,
       "RetryDelayMs": 1000,
-      "PersistentMessages": false
+      "PersistentMessages": true
     },
     "Topics": {
       "OrderCreated": "order.created",
@@ -67,10 +67,10 @@
     "AuditService": "http://localhost:9000"
   },
   "Redis": {
-    "ConnectionString": "localhost:6379",
-    "Password": "redis_dev_pass_123",
+    "ConnectionString": "localhost:6380",
+    "Password": "redis_dev_secure_pass_321",
     "Database": 3,
-    "InstanceName": "OrderService_Local"
+    "InstanceName": "OrderService_Dev"
   },
   "Cors": {
     "AllowedOrigins": [
@@ -82,12 +82,12 @@
     "AllowCredentials": true
   },
   "RateLimiting": {
-    "Enabled": false,
+    "Enabled": true,
     "WindowSizeInMinutes": 15,
-    "RequestLimit": 1000
+    "RequestLimit": 500
   },
   "HealthChecks": {
     "Enabled": true,
-    "TimeoutSeconds": 5
+    "TimeoutSeconds": 10
   }
 }
