--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -1,53 +1,53 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "Microsoft.AspNetCore": "Information",
-      "Microsoft.EntityFrameworkCore.Database.Command": "Information",
-      "Microsoft.EntityFrameworkCore": "Information",
-      "OrderService": "Debug"
+      "Default": "Warning",
+      "Microsoft.AspNetCore": "Error",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Error",
+      "Microsoft.EntityFrameworkCore": "Warning",
+      "OrderService": "Warning"
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=order_service_local_db;Username=orderuser;Password=order_dev_pass_123;Port=5433"
+    "DefaultConnection": "Host=localhost;Database=order_service_prod_db;Username=orderuser;Password=CHANGE_ME_SECURE_ORDER_PASSWORD;Port=5436"
   },
   "OrderService": {
-    "Environment": "Local",
+    "Environment": "Production",
     "DefaultCurrency": "USD",
     "TaxRate": 0.08,
     "FreeShippingThreshold": 100.0,
     "DefaultShippingCost": 10.0,
     "OrderNumberPrefix": "ORD",
-    "EnableDetailedLogging": true,
-    "AllowTestOrders": true
+    "EnableDetailedLogging": false,
+    "AllowTestOrders": false
   },
   "Api": {
-    "Title": "Order Service API (Local)",
+    "Title": "Order Service API",
     "Version": "v1",
-    "Description": "RESTful API for managing orders in the e-commerce platform - Local Development",
-    "SwaggerEnabled": true,
-    "DetailedErrors": true
+    "Description": "RESTful API for managing orders in the e-commerce platform",
+    "SwaggerEnabled": false,
+    "DetailedErrors": false
   },
   "Jwt": {
     "Issuer": "aioutlet-auth-service",
     "Audience": "aioutlet-order-service",
-    "Key": "your-super-secret-jwt-key-for-development-only-local-environment-testing",
+    "Key": "CHANGE_ME_PRODUCTION_JWT_SECRET_KEY_FOR_ORDER_SERVICE_VERY_LONG_AND_SECURE",
     "ValidateIssuerSigningKey": true,
     "ValidateIssuer": true,
     "ValidateAudience": true,
     "RequireExpirationTime": true,
-    "ClockSkew": "00:05:00"
+    "ClockSkew": "00:02:00"
   },
   "MessageBroker": {
     "Provider": "RabbitMQ",
     "RabbitMQ": {
-      "ConnectionString": "amqp://admin:admin123@localhost:5672/",
-      "Exchange": "orders.exchange.local",
+      "ConnectionString": "amqp://admin:CHANGE_ME_SECURE_RABBITMQ_PASSWORD@localhost:5674/",
+      "Exchange": "orders.exchange.prod",
       "ExchangeType": "topic",
       "PublisherConfirms": true,
-      "RetryAttempts": 3,
-      "RetryDelayMs": 1000,
-      "PersistentMessages": false
+      "RetryAttempts": 5,
+      "RetryDelayMs": 2000,
+      "PersistentMessages": true
     },
     "Topics": {
       "OrderCreated": "order.created",
@@ -67,27 +67,22 @@
     "AuditService": "http://localhost:9000"
   },
   "Redis": {
-    "ConnectionString": "localhost:6379",
-    "Password": "redis_dev_pass_123",
+    "ConnectionString": "localhost:6381",
+    "Password": "CHANGE_ME_SECURE_REDIS_PASSWORD",
     "Database": 3,
-    "InstanceName": "OrderService_Local"
+    "InstanceName": "OrderService_Prod"
   },
   "Cors": {
-    "AllowedOrigins": [
-      "http://localhost:3000",
-      "http://localhost:3001",
-      "http://localhost:3010",
-      "http://localhost:5001"
-    ],
+    "AllowedOrigins": ["https://yourdomain.com", "https://www.yourdomain.com", "https://admin.yourdomain.com"],
     "AllowCredentials": true
   },
   "RateLimiting": {
-    "Enabled": false,
+    "Enabled": true,
     "WindowSizeInMinutes": 15,
-    "RequestLimit": 1000
+    "RequestLimit": 100
   },
   "HealthChecks": {
     "Enabled": true,
-    "TimeoutSeconds": 5
+    "TimeoutSeconds": 15
   }
 }
