Implement observability features with structured logging and distributed tracing
- Added LogEntrySchema for unified log entry structure.
- Created ObservabilitySetup for configuring Serilog and tracing.
- Introduced TracingHelpers for OpenTelemetry integration.
- Set up OpenTelemetry tracing with ActivitySource and OTLP exporter.
- Enhanced OrderService with logging and tracing capabilities.
- Updated appsettings for service name, version, and OpenTelemetry configuration.
- Added logging cleanup service for graceful shutdown.
- Updated dependencies for OpenTelemetry and Serilog.

--- a/appsettings.Local.json
+++ b/appsettings.Local.json
@@ -8,6 +8,11 @@
       "OrderService": "Debug"
     }
   },
+  "ServiceName": "order-service",
+  "ServiceVersion": "1.0.0",
+  "OpenTelemetry": {
+    "OtlpEndpoint": "http://localhost:4318"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=order_service_local_db;Username=orderuser;Password=order_dev_pass_123;Port=5433"
   },
