--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,11 @@
       "OrderService": "Debug"
     }
   },
+  "ServiceName": "order-service",
+  "ServiceVersion": "1.0.0",
+  "OpenTelemetry": {
+    "OtlpEndpoint": "http://localhost:4318"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=order_service_local_db;Username=orderuser;Password=order_dev_pass_123;Port=5433"
   },
