feat: Implement rate limiting middleware and configuration for Order Service

--- a/appsettings.json
+++ b/appsettings.json
@@ -87,7 +87,7 @@
     "AllowCredentials": true
   },
   "RateLimiting": {
-    "Enabled": false,
+    "Enabled": true,
     "WindowSizeInMinutes": 15,
     "RequestLimit": 1000
   },
