Add logging utilities, validators, and configuration files for Order Service
- Implemented StandardLogger for structured logging with correlation ID support.
- Added CompositeDisposable class for managing multiple IDisposable objects.
- Created validators for order-related DTOs including CreateOrderDto, UpdateOrderStatusDto, and OrderQueryDto.
- Introduced appsettings files for Development, Local, and Production environments with appropriate configurations.
- Removed outdated appsettings.json.example template file.

--- a/OrderService.Tests/OrderService.Tests.csproj
+++ b/OrderService.Tests/OrderService.Tests.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OrderService.csproj" />
+    <ProjectReference Include="..\OrderService\OrderService.csproj" />
   </ItemGroup>
 
 </Project>
