feat: Implement initial database migration for Order and OrderItem entities
- Added initial migration to create Orders and OrderItems tables with appropriate columns and constraints.
- Updated DbContext to use SQL Server instead of PostgreSQL.
- Modified connection strings in appsettings for SQL Server.
- Removed old PostgreSQL-specific SQL scripts and sample data.
- Added Entity Framework Core Design package for migrations.

--- a/OrderService.Api/appsettings.Development.json
+++ b/OrderService.Api/appsettings.Development.json
@@ -9,7 +9,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=order_service_dev_db;Username=orderuser;Password=order_dev_secure_pass_456;Port=5435"
+    "DefaultConnection": "Server=localhost,1434;Database=order_service_db;User Id=sa;Password=Order_Dev_Pass_123!;TrustServerCertificate=True;MultipleActiveResultSets=true;Encrypt=False"
   },
   "OrderService": {
     "Environment": "Development",
