--- a/OrderService.Api/appsettings.json
+++ b/OrderService.Api/appsettings.json
@@ -14,7 +14,7 @@
     "OtlpEndpoint": "http://localhost:4318"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=order_service_local_db;Username=orderuser;Password=order_dev_pass_123;Port=5433"
+    "DefaultConnection": "Server=localhost,1434;Database=order_service_db;User Id=sa;Password=Order_Dev_Pass_123!;TrustServerCertificate=True;MultipleActiveResultSets=true;Encrypt=False"
   },
   "OrderService": {
     "Environment": "Local",
