feat: Refactor JWT authentication and authorization setup into extension methods

--- a/OrderService.Core/OrderService.Core.csproj
+++ b/OrderService.Core/OrderService.Core.csproj
@@ -25,6 +25,9 @@
     <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.9.0" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
     
+    <!-- JWT Authentication -->
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
+    
     <!-- Entity Framework Core -->
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
