chore: Remove unused HTTP request file and development configuration files

--- a/OrderService.Api/appsettings.json
+++ b/OrderService.Api/appsettings.json
@@ -1,11 +1,11 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "Microsoft.AspNetCore": "Information",
-      "Microsoft.EntityFrameworkCore.Database.Command": "Information",
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
       "Microsoft.EntityFrameworkCore": "Information",
-      "OrderService": "Debug"
+      "OrderService": "Information"
     }
   },
   "ServiceName": "order-service",
@@ -17,7 +17,7 @@
     "DefaultConnection": "Server=localhost,1434;Database=order_service_db;User Id=sa;Password=Order_Dev_Pass_123!;TrustServerCertificate=True;MultipleActiveResultSets=true;Encrypt=False"
   },
   "OrderService": {
-    "Environment": "Local",
+    "Environment": "Development",
     "DefaultCurrency": "USD",
     "TaxRate": 0.08,
     "FreeShippingThreshold": 100.0,
@@ -27,9 +27,9 @@
     "AllowTestOrders": true
   },
   "Api": {
-    "Title": "Order Service API (Local)",
+    "Title": "Order Service API",
     "Version": "v1",
-    "Description": "RESTful API for managing orders in the e-commerce platform - Local Development",
+    "Description": "RESTful API for managing orders in the e-commerce platform",
     "SwaggerEnabled": true,
     "DetailedErrors": true
   },
@@ -47,12 +47,12 @@
     "Provider": "RabbitMQ",
     "RabbitMQ": {
       "ConnectionString": "amqp://admin:admin123@localhost:5672/",
-      "Exchange": "orders.exchange.local",
+      "Exchange": "orders.exchange",
       "ExchangeType": "topic",
       "PublisherConfirms": true,
       "RetryAttempts": 3,
       "RetryDelayMs": 1000,
-      "PersistentMessages": false
+      "PersistentMessages": true
     },
     "Topics": {
       "OrderCreated": "order.created",
@@ -75,7 +75,7 @@
     "ConnectionString": "localhost:6379",
     "Password": "redis_dev_pass_123",
     "Database": 3,
-    "InstanceName": "OrderService_Local"
+    "InstanceName": "OrderService"
   },
   "Cors": {
     "AllowedOrigins": [
@@ -87,7 +87,7 @@
     "AllowCredentials": true
   },
   "RateLimiting": {
-    "Enabled": true,
+    "Enabled": false,
     "WindowSizeInMinutes": 15,
     "RequestLimit": 1000
   },
