refactor: Simplify JWT settings by removing unused properties and adjust validation parameters for issuer and audience

--- a/OrderService.Api/appsettings.json
+++ b/OrderService.Api/appsettings.json
@@ -17,14 +17,7 @@
     "DefaultConnection": "Server=localhost,1434;Database=order_service_db;User Id=sa;Password=Order_Dev_Pass_123!;TrustServerCertificate=True;MultipleActiveResultSets=true;Encrypt=False"
   },
   "Jwt": {
-    "Issuer": "aioutlet-auth-service",
-    "Audience": "aioutlet-order-service",
-    "Key": "8tDBDMcpxroHoHjXjk8xp/uAn8rzD4y8ZZremFkC4gI=",
-    "ValidateIssuerSigningKey": true,
-    "ValidateIssuer": true,
-    "ValidateAudience": true,
-    "RequireExpirationTime": true,
-    "ClockSkew": "00:05:00"
+    "Key": "8tDBDMcpxroHoHjXjk8xp/uAn8rzD4y8ZZremFkC4gI="
   },
   "MessageBroker": {
     "Provider": "RabbitMQ",
@@ -44,38 +37,5 @@
       "OrderShipped": "order.shipped",
       "OrderDelivered": "order.delivered"
     }
-  },
-  "ServiceUrls": {
-    "UserService": "http://localhost:3002",
-    "AuthService": "http://localhost:3001",
-    "ProductService": "http://localhost:8000",
-    "InventoryService": "http://localhost:5000",
-    "PaymentService": "http://localhost:5002",
-    "AdminService": "http://localhost:3010",
-    "AuditService": "http://localhost:9000"
-  },
-  "Redis": {
-    "ConnectionString": "localhost:6379",
-    "Password": "redis_dev_pass_123",
-    "Database": 3,
-    "InstanceName": "OrderService"
-  },
-  "Cors": {
-    "AllowedOrigins": [
-      "http://localhost:3000",
-      "http://localhost:3001",
-      "http://localhost:3010",
-      "http://localhost:5001"
-    ],
-    "AllowCredentials": true
-  },
-  "RateLimiting": {
-    "Enabled": false,
-    "WindowSizeInMinutes": 15,
-    "RequestLimit": 1000
-  },
-  "HealthChecks": {
-    "Enabled": true,
-    "TimeoutSeconds": 5
   }
 }
