feat: Integrate message broker service for event publishing and enhance order status management

--- a/OrderService.Api/appsettings.json
+++ b/OrderService.Api/appsettings.json
@@ -20,6 +20,11 @@
     "Key": "8tDBDMcpxroHoHjXjk8xp/uAn8rzD4y8ZZremFkC4gI="
   },
   "MessageBroker": {
+    "Service": {
+      "Url": "http://localhost:4000",
+      "ApiKey": "",
+      "TimeoutSeconds": 30
+    },
     "Topics": {
       "OrderCreated": "order.created",
       "OrderUpdated": "order.updated",
