feat: Implement embedded consumer for order status updates and remove worker service

--- a/OrderService.Api/appsettings.json
+++ b/OrderService.Api/appsettings.json
@@ -20,6 +20,12 @@
     "Key": "8tDBDMcpxroHoHjXjk8xp/uAn8rzD4y8ZZremFkC4gI="
   },
   "MessageBroker": {
+    "Provider": "RabbitMQ",
+    "RabbitMQ": {
+      "ConnectionString": "amqp://admin:admin123@localhost:5672/",
+      "Exchange": "aioutlet.events",
+      "ExchangeType": "topic"
+    },
     "Service": {
       "Url": "http://localhost:4000",
       "ApiKey": "",
