feat: Enhance order creation flow and update service configurations

--- a/OrderService.Api/appsettings.json
+++ b/OrderService.Api/appsettings.json
@@ -28,7 +28,7 @@
     },
     "Service": {
       "Url": "http://localhost:4000",
-      "ApiKey": "",
+      "ApiKey": "dev-api-key-12345",
       "TimeoutSeconds": 30
     },
     "Topics": {
