Refactor messaging system: remove RabbitMQ and MessagePublisherFactory, integrate Dapr for event publishing; update OrderService to use DaprEventPublisher; enhance logging with StandardLogger; add Dapr startup scripts; remove outdated test scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -404,3 +404,7 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+# Dapr secrets (IMPORTANT - do not commit!)
+.dapr/secrets.json
+.dapr/secrets*.json
