--- a/OrderService.Api/appsettings.json
+++ b/OrderService.Api/appsettings.json
@@ -10,33 +10,17 @@
   },
   "ServiceName": "order-service",
   "ServiceVersion": "1.0.0",
-  "OpenTelemetry": {
-    "OtlpEndpoint": "http://localhost:4318"
-  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1434;Database=order_service_db;User Id=sa;Password=Order_Dev_Pass_123!;TrustServerCertificate=True;MultipleActiveResultSets=true;Encrypt=False"
   },
   "Jwt": {
     "Key": "8tDBDMcpxroHoHjXjk8xp/uAn8rzD4y8ZZremFkC4gI="
   },
-  "MessageBroker": {
-    "Provider": "RabbitMQ",
-    "RabbitMQ": {
-      "ConnectionString": "amqp://admin:admin123@localhost:5672/",
-      "Exchange": "aioutlet.events",
-      "ExchangeType": "topic"
-    },
-    "Service": {
-      "Url": "http://localhost:4000",
-      "ApiKey": "dev-api-key-12345",
-      "TimeoutSeconds": 30
-    },
-    "Topics": {
-      "OrderCreated": "order.created",
-      "OrderUpdated": "order.updated",
-      "OrderCancelled": "order.cancelled",
-      "OrderShipped": "order.shipped",
-      "OrderDelivered": "order.delivered"
-    }
+  "Dapr": {
+    "Enabled": true,
+    "HttpPort": 3504,
+    "Host": "localhost",
+    "PubSubName": "order-pubsub",
+    "AppId": "order-service"
   }
 }
