--- a/OrderService.Api/OrderService.Api.csproj
+++ b/OrderService.Api/OrderService.Api.csproj
@@ -34,6 +34,10 @@
     <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.9.0" />
     <PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.0.0-beta.12" />
     <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.9.0" />
+    
+    <!-- Dapr -->
+    <PackageReference Include="Dapr.AspNetCore" Version="1.14.0" />
+    <PackageReference Include="Dapr.Client" Version="1.14.0" />
   </ItemGroup>
 
   <ItemGroup>
