--- a/OrderService.Core/OrderService.Core.csproj
+++ b/OrderService.Core/OrderService.Core.csproj
@@ -51,6 +51,9 @@
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
     <PackageReference Include="Serilog.Enrichers.Thread" Version="4.0.0" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
+    
+    <!-- Dapr -->
+    <PackageReference Include="Dapr.Client" Version="1.14.0" />
   </ItemGroup>
 
 </Project>
