--- a/.dapr/config.yaml
+++ b/.dapr/config.yaml
@@ -4,7 +4,11 @@ metadata:
   name: order-service-config
 spec:
   tracing:
-    samplingRate: '0'
+    samplingRate: '1'
+    otel:
+      endpointAddress: 'http://localhost:4318'
+      isSecure: false
+      protocol: 'http'
   features:
     - name: Actors
       enabled: false
