feat: Refactor Dockerfile structure, consolidate build stages, and update appsettings for database connection

--- a/OrderService.Api/appsettings.json
+++ b/OrderService.Api/appsettings.json
@@ -11,7 +11,7 @@
   "ServiceName": "order-service",
   "ServiceVersion": "1.0.0",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1434;Database=order_service_db;User Id=sa;Password=Order_Dev_Pass_123!;TrustServerCertificate=True;MultipleActiveResultSets=true;Encrypt=False"
+    "DefaultConnection": "Server=localhost,1434;Database=order_service_db;User Id=sa;Password=admin123;TrustServerCertificate=True;MultipleActiveResultSets=true;Encrypt=False"
   },
   "Jwt": {
     "Key": "8tDBDMcpxroHoHjXjk8xp/uAn8rzD4y8ZZremFkC4gI="
