feat: Add event-bus component configuration and update PubSubName in appsettings.json

--- a/OrderService.Api/appsettings.json
+++ b/OrderService.Api/appsettings.json
@@ -20,7 +20,7 @@
     "Enabled": true,
     "HttpPort": 3504,
     "Host": "localhost",
-    "PubSubName": "order-pubsub",
+    "PubSubName": "event-bus",
     "AppId": "order-service"
   }
 }
