feat: Implement Dapr secret store integration for lazy loading of database connection and JWT configuration

--- a/.gitignore
+++ b/.gitignore
@@ -406,5 +406,5 @@ FodyWeavers.xsd
 *.sln.iml
 
 # Dapr secrets (IMPORTANT - do not commit!)
-.dapr/secrets.json
-.dapr/secrets*.json
+# .dapr/secrets.json
+# .dapr/secrets*.json
