feat: Enhance logging for JWT authentication and user identification; add database connection string to appsettings

--- a/OrderService.Api/appsettings.json
+++ b/OrderService.Api/appsettings.json
@@ -16,5 +16,6 @@
     "Host": "localhost",
     "PubSubName": "event-bus",
     "AppId": "order-service"
-  }
+  },
+  "database_connectionString": "Server=localhost,1434;Database=order_service_db;User Id=sa;Password=Admin123!;TrustServerCertificate=True;MultipleActiveResultSets=true;Encrypt=False"
 }
